foo-gateway-istio/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: foo-service
  namespace: workshop
spec:
  hosts:
  - foo-service
  http:
  - route:
    - destination:
        host: foo-service
        subset: version-v1
      weight: 90
    - destination:
        host: foo-service
        subset: version-v2
      weight: 10
